[package]
name = "imgui-win32"
version = "0.2.1"
edition = "2021"
description = "Win32 input handler for imgui-rs"
repository = "https://github.com/0xFounders/imgui-win32"
homepage = "https://github.com/0xFounders/imgui-win32"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
imgui = "0.8.2"
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]